--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 sandbox_response_homepage:
     path:     /testing_fake_sandbox_response
-    defaults: { _controller: SandboxResponseBundle:Default:index }
+    defaults: { _controller: SandboxBundle:Default:index }
