--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -4,9 +4,11 @@
          backupGlobals="false"
          verbose="true"
          bootstrap="./vendor/autoload.php">
-    <testsuite name="Testing Sandbox Bundle">
-        <directory suffix="Test.php">tests</directory>
-    </testsuite>
+    <testsuites>
+        <testsuite name="SandboxBundle test suite">
+            <directory suffix="Test.php">./Tests</directory>
+        </testsuite>
+    </testsuites>
 
     <logging>
         <log type="coverage-html" target="build/coverage"/>
