--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "SandboxBundle",
     "require": {
         "php": ">=5.4.0",
-        "hamcrest/hamcrest-php": "1.2.0"
+        "danrevah/shortifypunit": "1.0.*"
     },
         "homepage": "https://github.com/danrevah/SandboxBundle",
         "license": "MIT",
