--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,4 +19,8 @@
             <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
+
+    <php>
+        <server name="KERNEL_DIR" value="./app/" />
+    </php>
 </phpunit>
