--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<phpunit xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.2/phpunit.xsd"
-         backupGlobals="false"
-         verbose="true"
-         bootstrap="./vendor/autoload.php">
+<phpunit
+        backupGlobals               = "false"
+        backupStaticAttributes      = "false"
+        colors                      = "true"
+        convertErrorsToExceptions   = "true"
+        convertNoticesToExceptions  = "true"
+        convertWarningsToExceptions = "true"
+        processIsolation            = "false"
+        stopOnFailure               = "false"
+        syntaxCheck                 = "false"
+        bootstrap                   = "Tests/bootstrap.php">
     <testsuites>
         <testsuite name="SandboxBundle test suite">
             <directory suffix="Test.php">./Tests</directory>
