--- a/.travis.yml
+++ b/.travis.yml
@@ -28,4 +28,4 @@ script:
 
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
-  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
+  - php ocular.phar code-coverage:upload --format=php-clover coverage.clover --repository=danrevah/SandboxBundle
