--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,9 @@
     "require": {
         "php": ">=5.4.0",
         "danrevah/shortifypunit": "1.0.*",
-        "doctrine/common": "2.4.*"
+        "doctrine/common": "2.4.*",
+        "symfony/framework-bundle": "2.6",
+        "symfony/expression-language": "~3.0@dev"
     },
         "homepage": "https://github.com/danrevah/SandboxBundle",
         "license": "MIT",
