--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "SandboxBundle",
     "require": {
         "php": ">=5.4.0",
-        "danrevah/shortifypunit": "1.0.*",
+        "danrevah/shortifypunit": "1.0.6",
         "doctrine/common": "2.4.*",
         "symfony/framework-bundle": "2.6",
         "symfony/expression-language": "~3.0@dev"
