--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "danrevah/shortifypunit": "1.0.6",
         "doctrine/common": "2.4.*",
         "symfony/framework-bundle": "2.6"
+        "symfony/expression-language": "~3.0@dev"
     },
         "homepage": "https://github.com/danrevah/SandboxBundle",
         "license": "MIT",
