--- a/composer.json
+++ b/composer.json
@@ -2,11 +2,11 @@
     "name": "danrevah/sandbox-bundle",
     "description": "SandboxBundle",
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=5.5.0",
         "danrevah/shortifypunit": "1.0.6",
         "doctrine/common": "2.4.*",
         "symfony/framework-bundle": "2.*",
-        "symfony/expression-language": "2.*"
+        "symfony/expression-language": "~3.0@dev"
     },
         "homepage": "https://github.com/danrevah/SandboxBundle",
         "license": "MIT",
