--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ install:
   - composer self-update
   - composer install
   - composer require symfony/framework-bundle:${SYMFONY_VERSION}
+  - composer require symfony/expression-language
   - composer require doctrine/common
 
 before_script:
