--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,7 @@
         "php": ">=5.5.0",
         "danrevah/shortifypunit": "1.0.6",
         "doctrine/common": "2.4.*",
-        "symfony/framework-bundle": "2.6",
-        "symfony/expression-language": "~3.0@dev"
+        "symfony/framework-bundle": "2.6"
     },
         "homepage": "https://github.com/danrevah/SandboxBundle",
         "license": "MIT",
