--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "php": ">=5.5.0",
         "symfony/framework-bundle": "~2.3",
         "symfony/expression-language": "2.6.4@dev",
-        "doctrine/common": "2.5.*@dev",
+        "doctrine/common": "dev-master",
         "danrevah/shortifypunit": "1.0.*"
     },
     "homepage": "https://github.com/danrevah/SandboxBundle",
