--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -6,7 +6,7 @@ services:
           - { name: kernel.event_listener, event: kernel.controller, method: onKernelController }
   danrevah.sandbox_response_manager:
       class: danrevah\SandboxBundle\Managers\SandboxResponseManager
-      arguments: [@kernel, @service_container, @danrevah.annotations_reader]
+      arguments: [@kernel, %sandbox.response.force%, @danrevah.annotations_reader]
   danrevah.annotations_reader:
       class: Doctrine\Common\Annotations\AnnotationReader
       arguments: []
