--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,4 +1,7 @@
-# .scrutinizer.yml
+# .scrutinizer.ymlchecks:
+php:
+    code_rating: true
+    duplication: true
 tools:
     external_code_coverage:
         timeout: 600    # Timeout in seconds.
