--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,7 +1,8 @@
 # .scrutinizer.ymlchecks:
-php:
-    code_rating: true
-    duplication: true
+checks:
+    php:
+        code_rating: true
+        duplication: true
 tools:
     external_code_coverage:
         timeout: 600    # Timeout in seconds.
