--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "Dan Revah",
-            "email": "dan@revahbox.com"
+            "email": "danreva89@gmail.com"
         }
     ],
     "support": {
